--- a/GestionChampionnat/src/main/resources/templates/login.html
+++ b/GestionChampionnat/src/main/resources/templates/login.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" href="../static/css/style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font
+awesome/4.7.0/css/font-awesome.min.css">
+    <title>Gestion Championnat</title>
 </head>
 <body>
 
+
+<h1>Connexion</h1>
 <form data-th-action="@{/login}" method="post">
     <input type="text" name="username" placeholder="Nom d'utilisateur" />
     <input type="password" name="password" placeholder="Mot de passe" />
     <button type="submit">Se connecter</button>
 </form>
+
 
 </body>
 </html>
