--- a/GestionChampionnat/src/main/resources/templates/inscription.html
+++ b/GestionChampionnat/src/main/resources/templates/inscription.html
@@ -11,11 +11,29 @@ awesome/4.7.0/css/font-awesome.min.css">
 
 
 <h1>Inscription</h1>
-<form data-th-action="@{/login}" method="post">
-    <input type="text" name="username" placeholder="Nom d'utilisateur" />
-    <input type="password" name="password" placeholder="Mot de passe" />
-    <button type="submit">Se connecter</button>
+<form datah-th-action="@{/register}" method="post">
+    <label>Prénom :</label>
+    <input type="text" name="firstName" required />
+    <br>
+
+    <label>Nom :</label>
+    <input type="text" name="lastName" required />
+    <br>
+
+    <label>Email :</label>
+    <input type="email" name="email" required />
+    <br>
+
+    <label>Mot de passe :</label>
+    <input type="password" name="password" required />
+    <br>
+
+    <button type="submit">S'inscrire</button>
 </form>
+
+<div id="erreur" datah-th-if="${#fields.hasAnyErrors()}">
+    <p data-th-each="err : ${#fields.allErrors()}" data-th-text="${err}"> Erreurs </p>
+</div>
 
 
 </body>
