--- a/GestionChampionnat/src/main/resources/templates/login.html
+++ b/GestionChampionnat/src/main/resources/templates/login.html
@@ -10,24 +10,24 @@ awesome/4.7.0/css/font-awesome.min.css">
 <body>
 <header>
     <nav>
-        <a th:href="@{/}">Accueil</a>
+        <a data-th-href="@{/}">Accueil</a>
 
         <div style="float: right;">
             <!-- Si l'utilisateur n'est pas connecté -->
-            <div th:if="${#authorization.expression('isAnonymous()')}">
-                <a th:href="@{/connexion}">Connexion</a> |
-                <a th:href="@{/inscription}">Inscription</a>
+            <div data-th-if="${#authorization.expression('isAnonymous()')}">
+                <a data-th-href="@{/connexion}">Connexion</a> |
+                <a data-th-href="@{/inscription}">Inscription</a>
             </div>
 
             <!-- Si l'utilisateur est connecté -->
-            <div th:if="${#authorization.expression('isAuthenticated()')}">
+            <div data-th-if="${#authorization.expression('isAuthenticated()')}">
                 <!-- Si c'est un admin -->
-                <span th:if="${#authorization.expression('hasRole(''ADMIN'')')}">
-                    <a th:href="@{/admin/dashboard}">Dashboard</a> |
+                <span data-th-if="${#authorization.expression('hasRole(''ADMIN'')')}">
+                    <a data-th-href="@{/admin/dashboard}">Dashboard</a> |
                 </span>
 
                 <!-- Déconnexion (POST obligatoire avec Spring Security) -->
-                <form th:action="@{/logout}" method="post" style="display:inline;">
+                <form data-th-action="@{/logout}" method="post" style="display:inline;">
                     <button type="submit">Déconnexion</button>
                 </form>
             </div>
