--- a/GestionChampionnat/src/main/resources/templates/index.html
+++ b/GestionChampionnat/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Résultats par compétition</title>
@@ -44,10 +45,14 @@
             </div>
 
             <div data-th-if="${#authorization.expression('isAuthenticated()')}">
+                <div>
+                    Connecté en tant que : <span data-sec-authentication="name"></span><br/>
+                    Rôles : <span data-th-text="${#authentication.authorities[0]}"></span>
+                </div>
+
                 <span data-th-if="${#authorization.expression('hasRole(''ADMIN'')')}">
                     <a data-th-href="@{/admin/dashboard}">Dashboard</a>
                 </span>
-
                 <form data-th-action="@{/logout}" method="post" style="display:inline;">
                     <button type="submit">Déconnexion</button>
                 </form>
